
package RedisProto;

message RPB_AccountData 
{
	optional int32		account_type	 = 1; 	// 帐号类型 (1游客，2自定义)
	optional int32		os_type 		 = 2; 	// 系统类型 (1ios, 2安卓)
	optional int64      playerid		 = 3;	// 玩家id
	optional string		mac 			 = 4; 	// mac地址
	optional string		imei 			 = 5; 	// 手机序列号
	optional string		imsi 			 = 6; 	// 运营商序列号
	optional string		uuid 			 = 7; 	// 苹果uuid
	optional int64		mobile 			 = 8;	// 手机号
	optional int32 		accountstate 	 = 9; 	// 账户状态(1正常, 2封号, 3已经登录)
	optional string		regtime 		 = 10;	// 注册时间
	optional string		lasttime 		 = 11;	// 最后登录时间
	optional string		block_desc 		 = 12;	// 封号原因
	optional string 	loginip 		 = 13;	// 登录ip
	optional string		reg_channel		 = 14;	// 注册渠道号
	optional string		login_channel	 = 15;	// 登录渠道号
	optional string		phone_model		 = 16;  // 手机型号
	optional string		phone_os_ver	 = 17;  // 手机系统版本
	optional string		game_ver		 = 18;	// 游戏版本号
	optional int64		communiid 		 = 19;	// 通讯id
	optional string     account_name 	 = 20;	// 账号名
	optional string		pwd				 = 21;	// 密码
	optional string		logout_time 	 = 22;	// 最后离线时间
	optional int64		online_time 	 = 23;	// 在线时长
}

message RPB_PlayerData 
{
	optional int64		playerid 		 = 1;	// 玩家id
	optional string		name 			 = 2;	// 昵称
	optional int32		sex 			 = 3;	// 1 男 2 女
	optional int32      vip				 = 4;	// vip 等级
	optional int32		vip_exp			 = 5;	// vip 经验
	optional int32		status 			 = 6; 	// 游戏状态（1离线，2在线，3游戏中）
	optional int32		serverid 		 = 7;	// 所在游戏服务器id
	optional int32		game_type 		 = 8;	// 所在游戏类型
	optional int32      room_type 		 = 9;	// 所在房间类型
	optional int32		level_type		 = 10;  // 所在场次类型
	optional int32      roomid 		 	 = 11;	// 所在房间id
	optional int64		gold 			 = 12;	// 金币
	optional int64		diamond 		 = 13;	// 钻石
	optional int64		deposit			 = 14;	// 存款
	//optional int64		profit			 = 15;	// 当日盈利
	optional int32		glevel 			 = 16;	// 游戏等级
	optional int32  	gexp   			 = 17;	// 游戏经验
	optional int32		gun_lv			 = 18;	// 炮等级
	optional int32		sign_day		 = 19;	// 累计签到天数
	optional int64		sign_time		 = 20;	// 签到时间
	optional int32		gunid			 = 21;	// 当前炮的id
	optional string		icon_url		 = 22;	// 头像url
	optional bool 		is_mc   		 = 23;	// 是否是月卡用户
	optional int64 		mc_overtime		 = 24;	// 月卡结束时间
	optional int32		rmb 			 = 26;	// 人民币
	optional bool 		is_got_xslb 	 = 27;	// 是否领取新手礼包
	optional int32 		battery 		 = 28;	// 炮 
}

message RPB_PlayerLoginAction
{
	optional int64      playerid		 = 1;	// 玩家id
	optional int32		account_type	 = 2; 	// 帐号类型 (1游客，2自定义)
	optional int32		os_type 		 = 3; 	// 系统类型 (1ios, 2安卓)
	optional string		login_channel	 = 4;	// 登录渠道号
	optional string		reg_channel		 = 5;	// 注册渠道号
	optional string		game_ver		 = 6;	// 游戏版本号
	optional string		name 			 = 7;	// 昵称
	optional int32      vip				 = 8;	// vip 等级
	optional int32		vip_exp			 = 9;	// vip 经验
	optional int32		glevel 			 = 10;	// 游戏等级
	optional int32  	gexp   			 = 11;	// 游戏经验
	optional int64		gold 			 = 12;	// 金币
	optional int64		diamond 		 = 13;	// 钻石
	optional int64		deposit			 = 14;	// 存款
	optional string 	login_time 		 = 15;	// 登陆时间
	optional string		regtime 		 = 16;	// 注册时间
	optional string		mac 			 = 17; 	// mac地址
	optional string		imei 			 = 18; 	// 手机序列号
	optional string		imsi 			 = 19; 	// 运营商序列号
	optional string		uuid 			 = 20; 	// 苹果uuid
}

message RPB_ResChangeAction
{
	optional int64      playerid		 = 1;	// 玩家id
	optional int32		account_type	 = 2; 	// 帐号类型 (1游客，2自定义)
	optional int32		os_type 		 = 3; 	// 系统类型 (1ios, 2安卓)
	optional string		login_channel	 = 4;	// 登录渠道号
	optional string		reg_channel		 = 5;	// 注册渠道号
	optional string		game_ver		 = 6;	// 游戏版本号
	optional int32		itemid 			 = 7;	// 物品id 取自物品表
	optional int32 		add_num 		 = 8;	// 增加数量
	optional int32      cur_num 		 = 9;	// 当前数量
	optional int32 		reason 			 = 10;	// 原因	取自 OptReason
	optional string     opt_time 		 = 11;	// 操作时间
	optional int32 		room_type 		 = 12;	// 所在游戏场
}

message RPB_BrokeAction
{
	optional int64 		playerid 		 = 1;
	optional string		login_channel	 = 2;	// 登录渠道号
	optional string		game_ver		 = 3;	// 游戏版本号
	optional string		broke_time       = 4;	// 破产时间
}

message RPB_PlayerItem
{
	optional int64 		playerid 		 = 1;
	optional int32		item1_num 		 = 2;
	optional int32		item2_num 		 = 3;
	optional int32		item3_num 		 = 4;
	optional int32		item4_num 		 = 5;
	optional int32		item5_num 		 = 6;
	optional int32		item6_num 		 = 7;
}
